# Stepic_4

./: README.md  output.txt  pyproject.toml  test.py
Module_2/: lesson 2.1_step_10.py  lesson 2.1_step_11.py  lesson 2.1_step_13.py  lesson 2.1_step_14.py  lesson 2.1_step_16.py  lesson 2.1_step_17.py  lesson 2.1_step_18.py  lesson 2.1_step_4.py  lesson 2.1_step_5.py  lesson 2.1_step_7.py  lesson 2.2_step_12.py  lesson 2.2_step_15.py  lesson 2.2_step_17.py  lesson 2.2_step_18.py  lesson 2.2_step_6.py  lesson 2.2_step_9.py
Module_4/: lesson 4.3_step_1.py  lesson 4.3_step_10.py  lesson 4.3_step_11.py  lesson 4.3_step_12.py  lesson 4.3_step_13.py  lesson 4.3_step_14.py  lesson 4.3_step_15.py  lesson 4.3_step_16.py  lesson 4.3_step_5.py  lesson 4.3_step_6.py  lesson 4.3_step_7.py  lesson 4.3_step_8.py  lesson 4.3_step_9.py  lesson 4.4_step_15.py  lesson 4.4_step_16.py  lesson 4.4_step_17.py  lesson 4.5_step_13.py  lesson 4.5_step_14.py  lesson 4.5_step_15.py  lesson 4.6_step_13.py  lesson 4.6_step_14.py  lesson 4.6_step_15.py  lesson 4.6_step_16.py  lesson 4.7_step_10.py  lesson 4.7_step_12.py  lesson 4.7_step_14.py  lesson 4.7_step_16.py  lesson 4.8_step_16.py  lesson 4.8_step_17.py  lesson 4.8_step_18.py  lesson 4.8_step_19.py  test.py
Module_5/: lesson 5.10_step_13.py  lesson 5.10_step_14.py  lesson 5.1_step_15.py  lesson 5.2_step_13.py  lesson 5.2_step_14.py  lesson 5.2_step_15.py  lesson 5.2_step_16.py  lesson 5.2_step_17.py  lesson 5.2_step_18.py  lesson 5.3_step_11.py  lesson 5.3_step_18.py  lesson 5.3_step_19.py  lesson 5.3_step_20.py  lesson 5.4_step_10.py  (+33 more)
(+138 files in other folders)
