[tool.poetry]
name = "stepic-3"
version = "0.1.0"
description = ""
authors = [" GenyaElamkov < GenyaElamkov@gmail.com>"]
readme = "README.md"
packages = [{include = "stepic_3"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88